Revert "Merge pilot readiness into master"
This reverts commit 38ef6f1627208b34aa23fc3e71467c6d767b7362, reversing
changes made to 53a8e145df84d6f2c6f49a91b316082cc23780df.
